--- a/app/views/spree/supplier/index.html.haml
+++ b/app/views/spree/supplier/index.html.haml
@@ -7,6 +7,8 @@
             = link_to image_tag(supplier.avatar.url(:product)), supplier_path(supplier.slug), class: 'thumb-image'
           .panel-footer.text-center
             = link_to supplier.name, supplier_path(supplier.slug)
-
+- else
+  .alert.alert-info= Spree.t(:no_elements_here)
+  
 - if @suppliers.respond_to?(:num_pages)
   = paginate @suppliers, theme: 'twitter-bootstrap-3'
